samples/_failures_safe/1761799655_355b8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0906cf6.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_c0906cf6.c:153:9: error: expected declaration or statement at end of input
  153 |         case TOKEN_EOF: printf("EOF");
      |         ^~~~
./samples/SAFE/__tmp_c0906cf6.c:153:9: error: expected declaration or statement at end of input
